--- a/TUTO/MENU/index.html
+++ b/TUTO/MENU/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title>Menu Responsive</title>
-		<link rel="stylesheet" href="/home/rdeliance/Desktop/TUTO/MENU/stylesheets/app.css">
+		<link rel="stylesheet" href="stylesheets/app.css">
 	</head>
 	<body>
 		<div class="site-container">
@@ -177,6 +177,6 @@
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script type="text/javascript" src="/home/rdeliance/Desktop/TUTO/MENU/sass/menu.js"></script>	
+		<script type="text/javascript" src="sass/menu.js"></script>	
 	</body>
 </html>
